--- a/Share Beauty App/Views/LX/LXTechGene2View.xib
+++ b/Share Beauty App/Views/LX/LXTechGene2View.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LXTechGeneView" customModule="Share_Beauty_App" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LXTechGene2View" customModule="Share_Beauty_App" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -23,7 +23,7 @@
                             <rect key="frame" x="1058" y="28" width="46" height="48"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </button>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tmp_dgt.png" translatesAutoresizingMaskIntoConstraints="NO" id="C2X-zR-Saa">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tmp_dgt2.png" translatesAutoresizingMaskIntoConstraints="NO" id="C2X-zR-Saa">
                             <rect key="frame" x="8" y="14" width="952" height="678"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
@@ -34,12 +34,12 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="mXbutton" destination="XGr-iP-00x" id="KyQ-gO-oYF"/>
+                <outlet property="mXbutton" destination="XGr-iP-00x" id="GCW-c9-cZL"/>
             </connections>
             <point key="canvasLocation" x="39.928057553956833" y="52.517985611510795"/>
         </view>
     </objects>
     <resources>
-        <image name="tmp_dgt.png" width="2090" height="1478"/>
+        <image name="tmp_dgt2.png" width="2024" height="1336"/>
     </resources>
 </document>
