--- a/Share Beauty App/Views/LX/LXLegendaryEnmeiComplexView.xib
+++ b/Share Beauty App/Views/LX/LXLegendaryEnmeiComplexView.xib
@@ -27,7 +27,7 @@
                             <rect key="frame" x="8" y="14" width="952" height="678"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDS-hb-cYA">
+                        <button opaque="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DDS-hb-cYA">
                             <rect key="frame" x="37" y="633" width="372" height="46"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Button" image="btn_bouble_gene.png"/>
