--- a/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
+++ b/Share Beauty App/Base.lproj/ProductDetailViewController.storyboard
@@ -252,24 +252,24 @@
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wx1-mu-ifn">
-                                                                <rect key="frame" x="0.0" y="218.5" width="60" height="129"/>
+                                                                <rect key="frame" x="0.0" y="218" width="60" height="129"/>
                                                                 <subviews>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i0h-jN-b85" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="1" width="60" height="43"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="43"/>
                                                                         <state key="normal" title="Button" image="features_smk_1.png"/>
                                                                         <connections>
                                                                             <action selector="onTapMakeUpMorning:" destination="yKP-cJ-zZz" eventType="touchUpInside" id="DUD-3d-ATL"/>
                                                                         </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVZ-4W-9Cd" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="44" width="60" height="43"/>
+                                                                        <rect key="frame" x="0.0" y="43" width="60" height="43"/>
                                                                         <state key="normal" title="Button" image="features_smk_2.png"/>
                                                                         <connections>
                                                                             <action selector="onTapMakeUpEvening:" destination="yKP-cJ-zZz" eventType="touchUpInside" id="qoE-bt-qEU"/>
                                                                         </connections>
                                                                     </button>
                                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbg-YB-PQa" customClass="BaseButton" customModule="Share_Beauty_App" customModuleProvider="target">
-                                                                        <rect key="frame" x="0.0" y="87" width="60" height="43"/>
+                                                                        <rect key="frame" x="0.0" y="86" width="60" height="43"/>
                                                                         <state key="normal" title="Button" image="features_smk_3.png"/>
                                                                         <connections>
                                                                             <action selector="onTapMakeUpNight:" destination="yKP-cJ-zZz" eventType="touchUpInside" id="4F2-e6-UEx"/>
@@ -671,9 +671,31 @@
                                                     </view>
                                                     <view hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eQA-cW-fKQ">
                                                         <rect key="frame" x="0.0" y="0.0" width="1024" height="613"/>
+                                                        <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sar-Sg-eQx">
+                                                                <rect key="frame" x="0.0" y="0.0" width="512" height="613"/>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="512" id="nc4-Jg-81g"/>
+                                                                </constraints>
+                                                            </view>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="htS-iE-EVv" userLabel="MVContent Right">
+                                                                <rect key="frame" x="512" y="0.0" width="512" height="613"/>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="512" id="wqD-Of-7V9"/>
+                                                                </constraints>
+                                                            </view>
+                                                        </subviews>
                                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
+                                                            <constraint firstAttribute="trailing" secondItem="htS-iE-EVv" secondAttribute="trailing" id="4hS-D2-hP6"/>
+                                                            <constraint firstAttribute="bottom" secondItem="sar-Sg-eQx" secondAttribute="bottom" id="B2X-rE-Qgo"/>
+                                                            <constraint firstItem="sar-Sg-eQx" firstAttribute="leading" secondItem="eQA-cW-fKQ" secondAttribute="leading" id="C7E-wo-TDd"/>
+                                                            <constraint firstAttribute="bottom" secondItem="htS-iE-EVv" secondAttribute="bottom" id="d20-Uh-MPz"/>
                                                             <constraint firstAttribute="height" constant="535" id="ioa-FJ-CKv"/>
+                                                            <constraint firstItem="sar-Sg-eQx" firstAttribute="top" secondItem="eQA-cW-fKQ" secondAttribute="top" id="vZX-94-84C"/>
+                                                            <constraint firstItem="htS-iE-EVv" firstAttribute="top" secondItem="eQA-cW-fKQ" secondAttribute="top" id="zhd-Y9-w7z"/>
                                                         </constraints>
                                                         <variation key="default">
                                                             <mask key="constraints">
@@ -829,6 +851,8 @@
                         <outlet property="mVCategoryImageBase" destination="yHV-lG-PXe" id="Aue-PM-y5w"/>
                         <outlet property="mVColorBall" destination="CbQ-Ai-fK0" id="QoF-Rz-Jdr"/>
                         <outlet property="mVContent" destination="eQA-cW-fKQ" id="NYv-PP-6o0"/>
+                        <outlet property="mVContentLeft" destination="sar-Sg-eQx" id="HAV-Y0-zTN"/>
+                        <outlet property="mVContentRight" destination="htS-iE-EVv" id="rA2-Je-EnU"/>
                         <outlet property="mVHowToUse" destination="HK7-2k-hNf" id="Thc-bY-3uV"/>
                         <outlet property="mVMain" destination="fmO-Po-Pdd" id="kdi-9c-MBS"/>
                         <outlet property="mVRelationProductBase" destination="hBN-OY-8nf" id="MSt-UM-ZGG"/>
